# shift-master-bot

./: .gitignore  README.md  Shift_Master.py  core.py  db.py  discord_master.py  funny_entry.py  keep_alive.py  match_collector_instarun.py  match_collector_instarun_db.py  match_parser.py  match_parser_instarun.py  match_stats.py  matchlog.csv  matchlog_old.csv  players.csv  players_temp.csv  pyproject.toml  requirements.txt  ruff.toml  shift_master.py  startup.sh  telegram_master.py  temp.py  test.py
.github/workflows/: main_telegram-dota-bot.yml
workflows/: deploy.yml
