[project]
name = "telegram-dota-bot"
version = "0.1.0"
description = "The bot allows interaction through commands to add and remove players, check player stats, and view solo losses."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "null"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot (>=22.0,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
